--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,53 @@
             <artifactId>guava</artifactId>
             <version>27.1-jre</version>
         </dependency>
-        
+
+        <!--poi对excel2007以上版本的支持-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.15</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
+        </dependency>
+
+        <!--7z压缩-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tukaani</groupId>
+            <artifactId>xz</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <!--基于7-zip的java压缩和解压缩工具-->
+        <dependency>
+            <groupId>com.xzixi.utils</groupId>
+            <artifactId>archive-tools</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <!--fastjson1.2.62之前的版本主要选修复版本(sec加数字后缀的版本)
+            1.1.15~1.1.31版本更新到1.1.31.sec07版本
+            1.1.32~1.1.33版本更新到1.1.33.sec06版本
+            1.1.34 版本更新到1.1.34.sec06版本
+            1.1.35~1.1.46版本更新到1.1.46.sec06版本
+            1.2.3~1.2.7版本更新到1.2.7.sec06版本或1.2.8.sec04版本
+            1.2.8 版本更新到1.2.8.sec06版本
+            1.2.9~1.2.29 版本更新到1.2.29.sec06版本
+        -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
+
     </dependencies>
 
     <build>
